Fixed height of level-jumping div.
Removed the initial tutorial animation and replaced it with a video. Still could use work.

--- a/index.css
+++ b/index.css
@@ -340,6 +340,7 @@ canvas {
     border: 2px solid gray;
     padding: 1em;
     width: 30%;
+    height: 4em;
     position: fixed;
     top: 100px;
     left: 100px;
